--- a/src/app/modules/private/components/home/home.component.html
+++ b/src/app/modules/private/components/home/home.component.html
@@ -42,7 +42,7 @@
           <h1 class="font-bold text-zinc-900 mt-1">
             {{ restaurant.name }}
           </h1>
-          <p class="text-sm">{{ restaurant.category }}</p>
+          <p class="text-sm text-zinc-800">{{ restaurant.category }}</p>
           <p class="text-sm font-bold text-primary-600">
             {{ restaurant.deliveryEstimate }} | entrega grátis
           </p>
