--- a/src/app/modules/private/components/restaurant-details/restaurant-details.component.html
+++ b/src/app/modules/private/components/restaurant-details/restaurant-details.component.html
@@ -82,6 +82,7 @@
         class="w-full"
         *ngFor="let product of products"
         [product]="product"
+        [restaurantId]="restaurantId"
       ></app-product-card>
     </div>
   </div>
