Fix undefined props errors in the restaurant details screen

--- a/src/app/modules/private/components/restaurant-details/restaurant-details.component.html
+++ b/src/app/modules/private/components/restaurant-details/restaurant-details.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-screen bg-primary-50 px-3" *ngIf="loaded">
+<div class="w-full h-screen bg-primary-50 px-3" *ngIf="restaurant">
   <div class="w-full h-56 bg-cover-imgBig bg-cover absolute top-0 left-0">
     <div
       class="w-full h-56 bg-gradient-to-b from-black/20 to-transparent absolute top-0 left-0"
