Integrating user address logic in the checkout page

--- a/src/app/modules/private/components/checkout/checkout.component.html
+++ b/src/app/modules/private/components/checkout/checkout.component.html
@@ -57,8 +57,11 @@
           </div>
         </div>
 
+        <!-- Selecione o endereço -->
         <div
           class="w-full h-fit p-3 bg-zinc-50 flex justify-start items-center shadow-lg rounded-3xl group hover:shadow-xl transition-all cursor-pointer"
+          [routerLink]="['add-address']"
+          *ngIf="!userAddress"
         >
           <div class="w-full flex-1 flex justify-start items-center gap-4">
             <img
@@ -90,6 +93,53 @@
             />
           </svg>
         </div>
+
+        <!-- Endereço cadastrado -->
+        <div
+          class="w-full flex justify-start items-start bg-white border border-zinc-400 p-4 rounded-3xl relative mt-2"
+          *ngIf="userAddress"
+        >
+          <div
+            class="w-fit py-1 px-2 bg-primary-600 rounded-lg flex justify-center items-center absolute -top-3"
+          >
+            <strong class="text-xs text-white">endereço de entrega</strong>
+          </div>
+
+          <div class="w-full flex flex-col gap-3">
+            <strong>Casa</strong>
+            <p>Rua Eng. Saturnino de Brito Filho</p>
+            <strong class="text-sm">Itararé</strong>
+          </div>
+
+          <div
+            class="w-5 h-5 cursor-pointer group daisy-tooltip daisy-tooltip-left"
+            data-tip="Editar endereço"
+          >
+            <svg
+              class="stroke-primary-600 group-hover:stroke-primary-700"
+              width="20"
+              height="20"
+              viewBox="0 0 20 20"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M11.0514 3.00002L4.20976 10.2417C3.95142 10.5167 3.70142 11.0584 3.65142 11.4334L3.34309 14.1333C3.23476 15.1083 3.93476 15.775 4.90142 15.6084L7.58476 15.15C7.95976 15.0834 8.48476 14.8084 8.74309 14.525L15.5848 7.28335C16.7681 6.03335 17.3014 4.60835 15.4598 2.86668C13.6264 1.14168 12.2348 1.75002 11.0514 3.00002Z"
+                stroke-width="1.5"
+                stroke-miterlimit="10"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M9.90833 4.20801C10.083 5.32539 10.6238 6.35312 11.4458 7.12988C12.2679 7.90664 13.3245 8.38845 14.45 8.49967M2.5 18.333H17.5"
+                stroke-width="1.5"
+                stroke-miterlimit="10"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
+        </div>
       </div>
 
       <!-- Métodos de pagamento -->
@@ -110,7 +160,7 @@
               [id]="method.id"
             />
             <label
-              class="hover:cursor-pointer flex justify-center items-center ml-0.5 tooltip"
+              class="hover:cursor-pointer flex justify-center items-center ml-0.5 daisy-tooltip"
               for="{{ method.id }}"
               [attr.data-tip]="method.name | titlecase"
             >
@@ -183,3 +233,5 @@
     </button>
   </div>
 </div>
+
+<router-outlet></router-outlet>
