--- a/src/app/modules/private/components/home/home.component.html
+++ b/src/app/modules/private/components/home/home.component.html
@@ -2,8 +2,8 @@
 
 <div class="w-full max-w-5xl my-0 mx-auto px-3 lg:px-0 pt-36 pb-20 bg-white">
   <div class="my-0 mx-auto">
-    <div class="max-w-5xl carousel rounded-box gap-2 lg:hidden">
-      <div *ngFor="let slide of slides" class="carousel-item">
+    <div class="max-w-5xl daisy-carousel daisy-rounded-box gap-2 lg:hidden">
+      <div *ngFor="let slide of slides" class="daisy-carousel-item">
         <img [src]="slide.src" [alt]="slide.alt" />
       </div>
     </div>
@@ -55,3 +55,5 @@
 <app-checkout-anchor></app-checkout-anchor>
 
 <app-navbar></app-navbar>
+
+<router-outlet></router-outlet>
