--- a/src/app/modules/private/components/home/home.component.html
+++ b/src/app/modules/private/components/home/home.component.html
@@ -1,4 +1,7 @@
-<app-header></app-header>
+<app-header
+  (emitUserSearch)="searchRestaurants($event)"
+  (cancelUserSearch)="cancelSearch()"
+></app-header>
 
 <div class="w-full max-w-5xl my-0 mx-auto px-3 lg:px-0 pt-36 pb-20 bg-white">
   <div class="my-0 mx-auto">
@@ -17,6 +20,19 @@
     </div>
   </div>
 
+  <div class="w-full mt-8" *ngIf="isSearching">
+    <p *ngIf="filteredRestaurantsList.length">
+      Encontramos
+      <strong>{{ filteredRestaurantsList.length }} resultado(s)</strong> para
+      <span class="text-primary-600 font-bold text-xl">"{{ userSearch }}"</span>
+    </p>
+    <p *ngIf="!filteredRestaurantsList.length">
+      Não encontramos nenhum resultado para
+      <span class="text-primary-600 font-bold text-xl">"{{ userSearch }}"</span>
+      🤔
+    </p>
+  </div>
+
   <div class="w-full flex flex-col mt-8">
     <h1 class="text-2xl font-bold text-zinc-900">Restaurantes</h1>
 
@@ -25,7 +41,11 @@
     >
       <div
         class="w-full flex flex-col sm:w-64 lg:w-80 cursor-pointer transition-transform duration-300 hover:scale-105"
-        *ngFor="let restaurant of restaurantsList"
+        *ngFor="
+          let restaurant of isSearching
+            ? filteredRestaurantsList
+            : restaurantsList
+        "
         [routerLink]="['../restaurant', restaurant.id]"
       >
         <div
